# Neeh-SDK

./: .gitignore  ARCHITECTURE.md  AUTHORS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  evidence_gap.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md  ink_datasets.py  move1_render_identical_pairs.py  move1b_token_budget.py  move3_gate.py  move3_grounding.py  move3_live.py  perf.py  real_capture_regression.py  test_ink_datasets.py  test_move1.py  test_move1b.py  test_move3.py  test_move3_gate.py  test_move3_live.py  test_real_capture_regression.py
benchmarks/results/: move1_pixel_identity_dryrun.json  move1_render_identical_gpt55_high.json  move1b_token_budget_gpt55_high.json  move1b_token_scaling_dryrun.json  move3_dc_s1_s4_smoke.json  move3_dc_smoke.json  move3_full_luna.json  move3_full_sonnet_medium.json  move3_gate_luna.json  move3_gate_v2_luna.json  move3_grounding_dryrun.json  move3_grounding_dryrun_full.json  move3_ledger.jsonl  move3_ledger_sonnet.jsonl  move3_ledger_v2.jsonl  move3_ledger_v3.jsonl  move3_smoke_codex.json  move3_v2_luna.json  move3_v3_defectfix_luna.json
cpp/cmake/: NeehSDKConfig.cmake.in
cpp/include/neeh/: analysis.hpp  c_api.h  core.hpp  export.h  render.hpp
cpp/src/: analysis.cpp  c_api.cpp  core.cpp  render.cpp
cpp/tests/: CMakeLists.txt  c_api_tests.c  core_tests.cpp
cpp/tests/package_consumer/: CMakeLists.txt  main.cpp
docs/: API.md  CASE_STUDY.md  RECRUITER_START.md  RELEASING.md
docs/adr/: 0001-structured-index-primary-raster-on-demand.md  0002-deterministic-analyzers-over-learned-encoder.md  0003-stateless-per-turn-sessions.md  README.md
docs/brand/: README.md
examples/: compare_context_arms.py  evaluate_perception_policies.py  quickstart.py
examples/assistant/: README.md  agent.py  index.html  server.py
neeh/: __init__.py  context.py  ids.py  protocol.py  semantics.py
neeh/adapters/: __init__.py  device_capture.py  uim.py
neeh/agents/: __init__.py  analyzers.py  assistant.py  iai.py  iai_mcp.py  reducers.py  timeline.py
neeh/canvas/: __init__.py  canvas.py  events.py  history.py  selection.py  viewport.py
neeh/document/: __init__.py  document.py  layer.py  page.py
neeh/ink/: __init__.py  geometry.py  hershey_script_complex.py  hershey_simplex.py  stroke.py  style.py  textink.py
neeh/rendering/: __init__.py  ascii.py  png.py  renderer.py  svg.py
neeh/tools/: __init__.py  core.py  registry.py
paper/: README.md  neeh-icf.tex
research/: __init__.py  delta-context-design.md  foveated-context-design.md  icf-v1-draft.md  icf-v2-draft.md  icf-v2-transport-design.md  prior-art-digest.md  protocol-m0.md
research/data/device/: RECORDING.md
research/harness/: README.md  __init__.py  actions.py  backends.py  corpus_s0.py  embedded.py  encoders.py  encoders_m2.py  eval_recognizer.py  fetch_mathwriting.py  fetch_quickdraw.py  fidelity.py  ledger.py  mathwriting.py  quickdraw.py  report.py  run_h6.py  run_h7.py  run_h8.py  run_h9.py  run_m1.py  runner.py  scorers.py  sizes.py  tasks.py
research/results/: context-sizes.md  embedded-coding-exhibit.md  geometry-fidelity.md  ledger.jsonl  m1-findings.md  m2-findings.md  real-ink-findings.md  summary.md  transport-findings.md
spec/: ink-accessibility-tree.md  ink-agent-interface-v1.md  ink-analysis-v1.md  ink-context-format-v1.md  ink-context-format.md  ink-eventlog-v1.md  ink-timeline-v1.md  neeh-device-capture-v1.md  tool-surface-v1.md  uim-profile-v1.md
spec/fixtures/: ink-analysis-v1.connector_candidates.json  ink-analysis-v1.envelope.schema.json  ink-analysis-v1.latest_mark.json  ink-analysis-v1.orientation.json  ink-analysis-v1.recorded_groups.json  ink-analysis-v1.reduce_recent_changes.json  ink-analysis-v1.reducer.schema.json  ink-eventlog-v1.compact.json  ink-eventlog-v1.compact.schema.json  ink-eventlog-v1.snapshot.json  ink-eventlog-v1.snapshot.schema.json  neeh-device-capture-v1.schema.json  neeh-device-capture-v1.session.json
tests/: test_agents.py  test_analyzers.py  test_ascii.py  test_assistant_demo.py  test_canvas.py  test_context.py  test_context_v1.py  test_device_capture.py  test_device_capture_m3.py  test_device_capture_stitch.py  test_document.py  test_events.py  test_harness_corpus.py  test_harness_encoders.py  test_harness_m2.py  test_harness_mathwriting.py  test_harness_quickdraw.py  test_harness_tasks.py  test_iai.py  test_ink.py  test_mcp_hardening.py  test_packaging.py  test_perception_eval.py  test_png.py  test_protocol.py  test_protocol_conformance.py  test_reducers.py  test_rendering.py  test_textink.py  test_timeline.py  test_tools.py  test_uim_adapter.py
