[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "neeh"
version = "0.2.0"
description = "A structured digital-ink SDK for notebook, whiteboard, and handwriting applications."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES"]
requires-python = ">=3.10"
authors = [{ name = "Kunwarbir Singh Padda" }]
maintainers = [{ name = "Kunwarbir Singh Padda" }]
keywords = ["ink", "handwriting", "stylus", "agents", "mcp", "notebook", "whiteboard"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
uim = ["universal-ink-library>=2.1,<3"]
png = ["Pillow>=10"]
agents = ["Pillow>=10"]
dev = ["pytest>=7", "build>=1", "universal-ink-library>=2.1,<3", "Pillow>=10"]

[tool.setuptools.packages.find]
include = ["neeh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
